<resources>
    <string name="app_name">MVVM-TheRightWay</string>
    <string name="register_hello">Hello There!</string>
    <string name="register_account">Register to your account</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="redirect_login">Already have an account?</string>
    <string name="login_now"><u>Login Now</u></string>
    <string name="splash_screen_image">splash screen image</string>
    <string name="email_example">youremail@domain.com</string>
    <string name="username_example">Username</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="login">Login</string>
    <string name="haven_t_register_yet">Haven\'t register yet?</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="login_illustration">Login Illustration</string>
    <string name="logo">Deuvox Logo</string>
    <string name="password_example">testingpassword</string>
</resources>