<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDE54E">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/deuvox_logo_black"
        android:layout_marginTop="28dp"
        android:layout_marginStart="29dp"/>

    <ImageView
        android:layout_width="537dp"
        android:layout_height="537dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-63dp"
        android:layout_marginTop="142dp"
        android:background="@drawable/ellipse_header" />

    <ImageView
        android:layout_marginTop="18dp"
        android:layout_marginStart="39dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/deuvox_amico"/>

    <TextView
        android:id="@+id/tv_register_hello"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="260dp"
        android:text="@string/register_hello"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_register_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@id/tv_register_hello"/>

    <TextView
        android:id="@+id/tv_register_name_title"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@id/tv_register_account"/>
    
    <EditText
        android:id="@+id/register_name"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginStart="84dp"
        android:paddingStart="10dp"
        tools:text="Julia Shakira P"
        android:textSize="12sp"
        android:textColor="#66000000"
        android:background="@drawable/register_border"
        android:layout_below="@id/tv_register_name_title"/>

    <TextView
        android:id="@+id/tv_register_email_title"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="12dp"
        android:text="@string/email_address"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@id/register_name"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginStart="84dp"
        android:paddingStart="10dp"
        tools:text="youremail@domain.com"
        android:textSize="12sp"
        android:textColor="#66000000"
        android:background="@drawable/register_border"
        android:layout_below="@id/tv_register_email_title"/>

    <TextView
        android:id="@+id/tv_register_password_title"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@id/register_email"/>

    <EditText
        android:id="@+id/register_password"
        android:inputType="textPassword"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginStart="84dp"
        android:paddingStart="10dp"
        tools:text="testingpassword"
        android:textSize="12sp"
        android:textColor="#66000000"
        android:background="@drawable/register_border"
        android:layout_below="@id/tv_register_password_title"/>

    <TextView
        android:id="@+id/tv_register_confirm_password_title"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="12dp"
        android:text="@string/confirm_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@id/register_password"/>

    <EditText
        android:id="@+id/register_confirm_password"
        android:inputType="textPassword"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginStart="84dp"
        android:paddingStart="10dp"
        tools:text="testingpassword"
        android:textSize="12sp"
        android:textColor="#66000000"
        android:background="@drawable/register_border"
        android:layout_below="@id/tv_register_confirm_password_title"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@id/register_confirm_password"
        android:layout_marginStart="130dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#FDE54E"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="18sp" />

</RelativeLayout>