<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_primary">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/deuvox_logo_black" />

    <ImageView
        android:id="@+id/deuvox_amico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/deuvox_amico" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="278dp"
        android:layout_marginTop="97dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/deuvox_ellipse" />

    <FrameLayout
        android:layout_width="411dp"
        android:layout_height="520dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deuvox_amico"
        android:background="@drawable/register_container" >
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_register_hello"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="34dp"
                android:text="@string/register_hello"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tv_register_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/register_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_register_hello"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_register_email_title"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="29dp"
                android:text="@string/email_address"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_register_account"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email_layout"
                android:layout_width="362dp"
                android:layout_height="42dp"
                android:layout_marginStart="25dp"
                app:layout_constraintTop_toBottomOf="@id/tv_register_email_title"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email"
                    android:layout_width="362dp"
                    android:layout_height="42dp"
                    android:paddingTop="11dp"
                    android:paddingStart="16dp"
                    android:hint="@string/email_example"
                    android:textSize="14sp"
                    android:background="@drawable/register_border" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_register_password_title"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:text="@string/password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_email_layout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_layout"
                android:layout_width="362dp"
                android:layout_height="42dp"
                android:layout_marginStart="25dp"
                android:layout_below="@id/tv_register_password_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_register_password_title"
                app:passwordToggleEnabled="true" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password"
                    android:inputType="textPassword"
                    android:layout_width="362dp"
                    android:layout_height="42dp"
                    android:paddingTop="11dp"
                    android:paddingStart="16dp"
                    android:hint="@string/password_example"
                    android:textSize="14sp"
                    android:textColor="#66000000"
                    android:background="@drawable/register_border" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="362dp"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                app:cornerRadius="21dp"
                android:backgroundTint="@color/yellow_primary"
                android:text="@string/register"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_password_layout"/>

            <TextView
                android:id="@+id/redirect_login"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/redirect_login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_register"/>

            <TextView
                android:id="@+id/login_now"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/login_now"
                android:textColor="@color/yellow_primary"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/redirect_login"
                app:layout_constraintTop_toBottomOf="@id/btn_register" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>