<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_primary"
    tools:context=".feature.login.LoginActivity">

    <ImageView
        android:id="@+id/deuvox_image"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/deuvox_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_login_register_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deuvox_image" />

    <FrameLayout
        android:id="@+id/login_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_shape_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_illustration">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/welcome_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/welcome_back"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintStart_toStartOf="@+id/welcome_back"
                app:layout_constraintTop_toBottomOf="@+id/welcome_back" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_email_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email_address"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintStart_toStartOf="@+id/sign_in"
                app:layout_constraintTop_toBottomOf="@+id/sign_in" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:boxBackgroundColor="?attr/colorSurface"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/header_email_form"
                app:layout_constraintTop_toBottomOf="@+id/header_email_form">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_example"
                    android:inputType="textEmailAddress"
                    android:padding="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintStart_toStartOf="@+id/email_container"
                app:layout_constraintTop_toBottomOf="@+id/email_container" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:boxBackgroundColor="?attr/colorSurface"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/email_container"
                app:layout_constraintTop_toBottomOf="@+id/header_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/yellow_primary"
                android:text="@string/login"
                android:textColor="?attr/colorOnSurface"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="@+id/password_container"
                app:layout_constraintStart_toStartOf="@+id/password_container"
                app:layout_constraintTop_toBottomOf="@+id/password_container" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/haven_t_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/haven_t_register_yet"
                app:layout_constraintStart_toStartOf="@+id/login_button"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/register_now"
                android:textColor="@color/yellow_primary"
                app:layout_constraintStart_toEndOf="@+id/haven_t_register"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>